--- a/Projeto-CRUD/modal/modal.css
+++ b/Projeto-CRUD/modal/modal.css
@@ -18,14 +18,17 @@
 
     dialog .modal {
         padding: 4px;
-        display: flex;
-        justify-content: space-between;
         text-align: center;
 
         background-color: rgba(238, 130, 238, 0);
     }
+    dialog .novo {
+        text-align: center;
+        display: flex;
+        justify-content: space-between;
+    }
     dialog #Cabecario {
-        padding: 12px 0px 20px 20px;
+        padding: 20px 0px 0px 50px;
     }
     dialog #Cabecario h1 {
         display: flex;
@@ -44,7 +47,7 @@
         background-color: rgba(0, 255, 255, 0);
     }
     dialog .icone {
-        background-color: rgba(255, 255, 0, 0);
+        background-color: rgba(252, 252, 19, 0);
         cursor: pointer;
         padding: 16px;
         margin: 0;
