--- a/Projeto-CRUD/styles/desktop/home.css
+++ b/Projeto-CRUD/styles/desktop/home.css
@@ -1,8 +1,15 @@
 
 
 @media (width >= 768px) {
+    body {
+        background-image: url(../images/background.png);
+
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+    }
     header {
-        background-color: rgb(143, 43, 43);
+        background-color: rgba(143, 43, 43, 0);
         padding: 2em;
         display: flex;
         justify-content: center;
@@ -13,7 +20,8 @@
 
     .container {
         background-color:#BE97C6;
-        width: 58vw;
+        width: 70vw;
+        height: 15vh;
         border-radius: 20px;
 
     }
@@ -22,6 +30,7 @@
         display: inline-flex;
         align-items: center;
         width: 100%;
+        height: 100%;
         justify-content: space-between;
         padding: 0 3em;
 
@@ -32,8 +41,8 @@
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         color: white;
         font-weight: bold;
-        letter-spacing: 3px;
-        font-size: 40px;
+        letter-spacing: 2px;
+        font-size: 2em;
         padding: 0;
         margin: 0;
     }
@@ -46,9 +55,9 @@
         justify-content: space-evenly;
         align-items: center;
         padding: 6px;
-        gap: 14px;
-        width: 10em;
-        height: 4em;
+        gap: 4px;
+        width: 8em;
+        height: 3em;
 
         transition: 0.2s ease-in;
         cursor: pointer;
@@ -107,14 +116,27 @@
 
     table tbody i {
         font-size: 1.6rem;
-        background-color: #ffffff;
+        background-color: #ffffff00;
         padding: 4px;
         margin: 0;
         cursor: pointer;
         border-radius: 4px;
     }
-    table tbody i #edit {
-        color: red;
+    table .UR > #edit  {
+        background-color: #A9DBB8;
+        transition: 0.2s ease-in;
+    }
+    table .UR > #edit:hover  {
+        background-color: #69c785;
+        transform: scale(1.06);
+    }
+    table .UR > #delete  {
+        background-color: #dba9a9;
+        transition: 0.2s ease-in;
+    }
+    table .UR > #delete:hover  {
+        background-color: #c76969;
+        transform: scale(1.06);
     }
   
 
