--- a/Projeto-CRUD/modal/modal.css
+++ b/Projeto-CRUD/modal/modal.css
@@ -177,8 +177,163 @@
 
 }
 
-@media (max-width: 768px) and (min-width: 334px) {
+@media (max-width: 768px) and (min-width: 100px) {
+
     dialog {
         width: 100%;
+        height: 100%;
+        border: none;
+        border-radius: 8px;
+        box-shadow: 0px 0px 10px black;
+        overflow: hidden;
+        margin: auto;
+    }    
+
+    dialog .novo {
+        text-align: center;
+        display: flex;
+        justify-content: space-between;
     }
+    dialog #Cabecario {
+        padding: 0px 0px 20px 10px;
+    }
+    dialog #Cabecario h1 {
+        display: flex;
+        justify-content: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2.3rem;
+        background-color: rgba(255, 228, 196, 0);
+        margin: 0;
+        padding: 4px;
+    }
+    dialog #Cabecario p {
+        font-family: sans-serif;
+        color: #75757585;
+        padding: 0;
+        margin: 0;
+        background-color: rgba(0, 255, 255, 0);
+    }
+    dialog .icone {
+        background-color: rgba(252, 252, 19, 0);
+        cursor: pointer;
+        padding: 0px;
+        margin: 0;
+        height: fit-content;
+        display: flex;
+        justify-content: end;
+        font-size: 18px;
+        transition: 0.4s;
+    }
+    dialog .icone:hover {
+        transform: scale(1.40);
+    }
+    form {
+        background-color: rgb(255, 255, 255);
+        padding: 1.5rem 1.5rem 2rem 1.5rem;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    .campo {
+        display: flex;
+        flex-direction: column;
+        color: #1E1E1E;
+        margin-bottom: 1rem;
+    }
+    .campo label {
+        margin-bottom: 4px;
+    }
+    .campo input {
+        border: 1px solid #D9D9D9;
+        padding: 12px;
+        border-radius: 8px;
+    }
+    .campo input::placeholder {
+       color: #B3B3B3; 
+    }
+
+    .campo-checkbox {
+        background-color: rgba(255, 228, 196, 0);
+        margin-bottom: 12px;
+    }
+    .campo-checkbox p {
+        padding: 0;
+        margin: 0;
+    }
+    .nasc {
+        display: flex;
+        flex-direction: column;
+        z-index: 2;
+        outline: none;    
+        margin-top: 24px;
+    }
+
+
+    .nasc > label {
+        color: #000000;
+        font-size: 12px;
+        margin-left: 14px; 
+        background-color: #ffffff;
+        padding: 0px 8px 0 8px;   
+        position: relative;
+        outline: none;
+    }
+ 
+    .nasc > #data-nasc {
+        position: absolute;
+        transform: translateY(-10px);
+        margin-bottom: 200p;
+        z-index: 3;
+        line-height: 20px;
+
+    }
+
+    .nasc > input {
+        padding: 12px;
+        width: 100%;
+        box-sizing: border-box;
+        border: 1px solid #49454F;
+        border-radius: 4px;
+        font-size: 16px;
+        outline: none;
+        transition: 0.2s ease;
+    }
+    .nasc > input:focus, .nasc > .nasc input:valid {
+        border: 3px solid #65558F;
+    }
+
+    .nasc label > p {
+        padding: 0;
+        margin: 10px 0 10px 0px;
+    }
+
+    .campo label > p {
+        padding: 0px;
+        margin: 0px;
+        margin-top: 10px;
+    }
+
+    form .enviar {
+        background-color: #65558f00;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+
+    }
+
+    form .enviar input{
+        background-color: #2C2C2C;
+        color: white;
+        width: 40%;
+        width: 249px;
+        height: 40px;
+        border-radius: 8px;
+        letter-spacing: 1px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        cursor: pointer;
+        transition: ease-in 0.2s;
+    }
+    form .enviar input:hover {
+        transform: scale(1.09);
+    }
+
+
 }
